--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -81,6 +81,21 @@ body {
   vertical-align: top;
 }
 
+.task_box {
+  position: relative;
+  vertical-align: middle;
+  margin-left: auto;
+  margin-right: auto;
+  width: 85%;
+  height: 85%;
+  @include testing;
+}
+
+.clear_task_box {
+  position: absolute;
+  bottom: 0;
+}
+
 .person {
   position: relative;
   width: 200px;
@@ -111,11 +126,92 @@ body {
 
 .individual_task {
   position: relative;
+  bottom: 0;
+}
+
+.checkbox_image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  cursor: pointer;
+}
+
+.whitebox_cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+}
+
+.background_white {
+  background-color: white;
+}
+
+input[type="checkbox"] {
+  display: none;
+}
+
+.inline_buttons {
+  position: relative;
+  display: inline-block;
+}
+
+.add_task_styles {
+  height: 35px;
+  border-left: none;
+  border-right: none;
+  border-top: none;
+  border-bottom: 1px solid black;
+  transition: 0.3s;
+}
+
+.add_task_styles:focus {
+  border-bottom: 1px solid pink;
+  transition: 0.3s;
+}
+
+.add_task_buttons {
+  height: 44px;
+  background-color: white;
+  border: 2px solid pink;
+  margin-left: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.add_task_buttons:hover {
+  background-color: pink;
+  transition: 0.3s;
+}
+
+.task_buttons {
+  position: absolute;
+  display: inline-block;
+  bottom: 0;
 }
 
 .inner_task_block {
   position: relative;
   display: inline-block;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  height: 25px;
+  width: 75%;
+  transition: 0.3s;
+  @include testing;
+}
+
+.inner_task_checkbox {
+  position: relative;
+  display: inline-block;
+  height: 25px;
+  width: 25px;
+  vertical-align: middle;
+  @include testing;
 }
 
 .input_message_container {
