--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -330,3 +330,35 @@ input[type="checkbox"] {
   padding-top: 15px;
   @include testing;
 }
+
+.search_user_block {
+  position: relative;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.add_user_component {
+  position: relative;
+  margin-bottom: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid grey;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.add_user_component:hover {
+  background-color: pink;
+  transition: 0.3s;
+}
+
+.add_user {
+  position: relative;
+  float: right;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  border: 1px solid black;
+  display: inline-block;
+}
