--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -2,6 +2,10 @@ body {
   margin: 0;
 }
 
+html {
+  font-family: "Roboto", sans-serif;
+}
+
 @mixin testing {
   border: 1px solid red;
 }
@@ -129,6 +133,7 @@ body {
   margin-right: auto;
   vertical-align: middle;
   border: 1px solid grey;
+  font-family: "Roboto", sans-serif;
 }
 
 .individual_task {
@@ -242,6 +247,7 @@ input[type="checkbox"] {
   width: 90%;
   height: 98%;
   resize: none;
+  font-family: "Roboto", sans-serif;
 }
 
 .div_message_input_box {
