--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -119,12 +119,13 @@ html {
 
 .link_to_person {
   color: black;
+  display: inline-block;
   text-decoration: none;
 }
 
 .person {
   position: relative;
-  width: 100%;
+  width: 85%;
   border-radius: 5px;
   padding: 10px;
   background-color: #c24e3d;
@@ -472,6 +473,8 @@ input[type="checkbox"] {
   width: 320px;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .user_search_input {
@@ -479,7 +482,11 @@ input[type="checkbox"] {
   width: 250px;
   padding: 5px;
   font-size: 18px;
-  border: none;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  letter-spacing: 1px;
+  border-bottom: 1px solid grey;
   display: inline-block;
   transition: 0.3s;
 }
@@ -493,4 +500,53 @@ input[type="checkbox"] {
   position: relative;
   width: 60px;
   display: inline-block;
+}
+
+.search_image_block {
+  position: relative;
+  display: inline-block;
+  height: 35px;
+  width: 35px;
+  vertical-align: bottom;
+  cursor: pointer;
+}
+
+.search_image {
+  position: relative;
+  height: 35px;
+  width: 35px;
+}
+
+.navbar {
+  position: relative;
+  height: 5%;
+  width: 100%;
+  background-color: grey;
+}
+
+.fixed_under {
+  position: relative;
+  width: 100%;
+  height: 95%;
+}
+
+@mixin testing2 {
+  border: 1px solid blue;
+}
+
+.friend_class_container {
+  position: relative;
+  height: 90%;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  scrollbar-width: thin;
+  scrollbar-color: #ffcbec #fff4fb;
+  @include testing2;
+}
+
+.remove_friend_button {
+  position: relative;
+  display: inline-block;
+  margin-left: 5px;
+  width: 15%;
 }
