Can no longer add own account as friend. Can no longer add two copies of the same friend

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -424,6 +424,11 @@ input[type="checkbox"] {
   @include standardTransition;
 }
 
+.self_user {
+  position: relative;
+  float: right;
+}
+
 .add_user:hover {
   background-color: yellow;
   @include standardTransition;
