--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -471,6 +471,7 @@ input[type="checkbox"] {
   margin-right: auto;
   text-align: center;
   opacity: 0;
+  @include noselect;
   @include testing;
   @include standardTransition;
 }
@@ -588,4 +589,25 @@ input[type="checkbox"] {
     opacity: 1;
     top: 25px;
   }
+}
+
+.message_box_information_header {
+  position: relative;
+  text-align: center;
+  margin-top: 50px;
+  font-size: 24px;
+}
+
+.info_header_span {
+  color: pink;
+}
+
+.message_box_under_info {
+  position: relative;
+  margin-top: 50px;
+  width: 80%;
+  line-height: 165%;
+  font-size: 18px;
+  margin-left: auto;
+  margin-right: auto;
 }
