--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -12,7 +12,7 @@ html {
 }
 
 @mixin standardTransition {
-  transition: 0.3s;
+  transition: 0.3s ease-in-out all;
 }
 
 @mixin noselect {
@@ -716,4 +716,11 @@ input[type="checkbox"] {
   margin-right: auto;
   left: 0;
   right: 0;
+}
+
+.open_project {
+  position: relative;
+  width: 80%;
+  height: 200px;
+  @include testing;
 }
