--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -721,6 +721,15 @@ input[type="checkbox"] {
 .open_project {
   position: relative;
   width: 80%;
+  display: block;
   height: 200px;
+  @include testing;
+}
+
+.profile_block {
+  position: relative;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
   @include testing;
 }
