--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,3 +1,10 @@
+@import "components/about/about";
+@import "components/contact/contact";
+@import "components/homepage/homepage";
+@import "components/initial/initial";
+@import "components/navigation/nav";
+@import "components/profile/profile";
+
 body {
   margin: 0;
   background-color: rgb(244, 244, 244);
@@ -6,71 +13,6 @@ body {
 html {
   font-family: "Roboto", sans-serif;
   margin: 0;
-}
-
-@mixin testing {
-  border: 1px solid red;
-}
-
-@mixin testing2 {
-  border: 1px solid blue;
-}
-
-@mixin standardTransition {
-  transition: 0.3s ease-in-out all;
-}
-
-@mixin fastTransition {
-  transition: 0.15s ease-in-out all;
-}
-
-@mixin noselect {
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-.userform {
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-  width: 400px;
-  height: 250px;
-}
-
-@mixin page_fields {
-  position: relative;
-  display: block;
-  margin-top: 25px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.user_input_fields {
-  width: 175px;
-  height: 25px;
-  font-size: 16px;
-  padding: 5px;
-  border-top: none;
-  border-left: none;
-  border-right: none;
-  border-bottom: 1px solid grey;
-  @include page_fields;
-  @include standardTransition;
-}
-
-.user_input_fields:focus {
-  border-bottom: 1px solid pink;
-  @include standardTransition;
-}
-
-.signup_field {
-  text-align: center;
-  font-size: 18px;
-  @include page_fields;
 }
 
 .home_page {
@@ -82,131 +24,9 @@ html {
   overflow: hidden;
 }
 
-.friend_list {
-  position: relative;
-  width: 25%;
-  min-width: 200px;
-  border-right: 1px solid grey;
-  display: inline-block;
-  margin: -1px;
-  padding: 0;
-  height: 100%;
-  vertical-align: top;
-}
-
-.friend_list_header,
-.message_viewer_header,
-.task_list_header {
-  text-align: center;
-}
-
-.message_viewer {
-  position: relative;
-  width: 50%;
-  display: inline-block;
-  height: 100%;
-  vertical-align: top;
-}
-
-.task_list {
-  position: relative;
-  width: 25%;
-  display: inline-block;
-  padding: -1px;
-  height: 100%;
-  margin: -1px;
-  border-left: 1px solid grey;
-  vertical-align: top;
-}
-
-.horizontal_push {
-  position: relative;
-  height: 100%;
-  margin-left: 15px;
-  vertical-align: top;
-}
-
-.task_box {
-  position: relative;
-  vertical-align: middle;
-  margin-left: auto;
-  margin-right: auto;
-  width: 85%;
-  min-width: 300px;
-  height: 100%;
-  @include testing;
-}
-
 .clear_task_box {
   position: absolute;
   bottom: 0;
-}
-
-.person_container {
-  position: relative;
-  width: 175px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.link_to_person {
-  color: black;
-  display: inline-block;
-  text-decoration: none;
-}
-
-.person {
-  position: relative;
-  width: 85%;
-  border-radius: 5px;
-  padding: 10px;
-  background-color: #c24e3d;
-  cursor: pointer;
-}
-
-.friend_comp {
-  position: relative;
-  vertical-align: middle;
-  margin-left: auto;
-  margin-right: auto;
-  height: 100%;
-  width: 85%;
-  @include testing;
-}
-
-.message_box {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  margin-left: auto;
-  margin-right: auto;
-  vertical-align: middle;
-  border: 1px solid grey;
-  font-family: "Roboto", sans-serif;
-}
-
-.individual_task {
-  position: relative;
-  bottom: 0;
-}
-
-.checkbox_image {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 25px;
-  width: 25px;
-  cursor: pointer;
-}
-
-.whitebox_cover {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 25px;
-  width: 25px;
 }
 
 .background_white {
@@ -215,168 +35,6 @@ html {
 
 input[type="checkbox"] {
   display: none;
-}
-
-.inline_buttons {
-  position: relative;
-  display: inline-block;
-}
-
-.add_task_styles {
-  height: 35px;
-  border-left: none;
-  display: block;
-  border-right: none;
-  border-top: none;
-  margin-bottom: 15px;
-  padding: 3px;
-  font-size: 16px;
-  width: 100%;
-  border-bottom: 1px solid black;
-  @include standardTransition;
-}
-
-.add_task_styles:focus {
-  border-bottom: 1px solid pink;
-  @include standardTransition;
-}
-
-.add_task_buttons {
-  position: relative;
-  height: 44px;
-  background-color: white;
-  border: 2px solid pink;
-  display: inline-block;
-  margin-left: 5px;
-  border-radius: 5px;
-  cursor: pointer;
-  @include standardTransition;
-}
-
-.add_task_buttons:hover {
-  background-color: pink;
-  @include standardTransition;
-}
-
-.task_buttons {
-  position: absolute;
-  display: inline-block;
-  width: 250px;
-  bottom: 0;
-  margin-bottom: 2%;
-}
-
-.tasklist_container {
-  position: relative;
-  height: 80%;
-  width: 100%;
-  overflow: hidden;
-  @include testing;
-}
-
-.tasklist_container:hover {
-  overflow-y: scroll;
-  overflow-x: hidden;
-  scrollbar-width: thin;
-  scrollbar-color: #ffcbec #fff4fb;
-}
-
-.inner_task_block {
-  position: relative;
-  display: inline-block;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  padding: 5px;
-  font-size: 18px;
-  height: auto;
-  width: 230px;
-  overflow-wrap: break-word;
-  @include standardTransition;
-  @include testing;
-}
-
-.inner_task_checkbox {
-  position: relative;
-  display: inline-block;
-  margin-top: 5px;
-  height: 25px;
-  width: 25px;
-  vertical-align: top;
-  @include testing;
-}
-
-.input_message_container {
-  position: relative;
-  box-sizing: border-box;
-  bottom: 0;
-  margin-left: auto;
-  padding: 10px;
-  margin-right: auto;
-  display: inline-block;
-  border-radius: 5px 0 0 5px;
-  font-size: 16px;
-  width: 90%;
-  height: 98%;
-  resize: none;
-  font-family: "Roboto", sans-serif;
-}
-
-.div_message_input_box {
-  position: absolute;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin-bottom: 2%;
-  width: 90%;
-  height: 8%;
-}
-
-.div_message_input_box_button {
-  position: relative;
-  display: inline-block;
-  box-sizing: border-box;
-  height: 100%;
-  width: 10%;
-  vertical-align: top;
-}
-
-.div_message_button {
-  position: relative;
-  display: block;
-  border: none;
-  background-color: grey;
-  cursor: pointer;
-  margin: 0;
-  height: 50%;
-  width: 100%;
-  vertical-align: top;
-  @include standardTransition;
-}
-
-.send_enter_button {
-  height: 25px;
-  width: 25px;
-}
-
-.div_button_top {
-  border-radius: 0 5px 0 0;
-}
-
-.div_button_bottom {
-  border-radius: 0 0 5px 0;
-}
-
-.div_message_button:hover {
-  background-color: pink;
-  @include standardTransition;
-}
-
-.person_comp {
-  position: relative;
-  height: 75%;
 }
 
 .friends_block {
@@ -388,52 +46,11 @@ input[type="checkbox"] {
   @include testing;
 }
 
-.tab_button {
-  position: relative;
-  display: inline-block;
-  width: 50%;
-  height: 40px;
-}
-
-.tab_button_left {
-  border-radius: 0 15px 0 0;
-}
-
-.tab_button_right {
-  border-radius: 15px 0 0 0;
-}
-
-.friend_search {
-  position: relative;
-  bottom: 0;
-  width: 85%;
-  height: 50px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 15px;
-  @include testing2;
-}
-
 .search_user_block {
   position: relative;
   width: 60%;
   margin-left: auto;
   margin-right: auto;
-}
-
-.add_user_component {
-  position: relative;
-  margin-bottom: 10px;
-  padding: 10px;
-  border-radius: 5px;
-  border: 1px solid grey;
-  cursor: pointer;
-  @include standardTransition;
-}
-
-.add_user_component:hover {
-  background-color: pink;
-  @include standardTransition;
 }
 
 .add_user {
@@ -446,109 +63,10 @@ input[type="checkbox"] {
   @include standardTransition;
 }
 
-.self_user {
-  position: relative;
-  float: right;
-}
-
-.add_user:hover {
-  background-color: yellow;
-  @include standardTransition;
-}
-
-.add_user_button {
-  height: 20px;
-  width: 20px;
-}
-
-.message_container {
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-  height: 88%;
-  width: 100%;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  scrollbar-color: #ffcbec transparent;
-  @include testing;
-}
-
-.individual_message {
-  position: relative;
-  width: 80%;
-  padding: 10px;
-  border-radius: 5px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.load_if_empty {
-  position: relative;
-  top: 20%;
-  font-size: 22px;
-  color: #878787;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  opacity: 0;
-  @include noselect;
-  @include testing;
-  @include standardTransition;
-}
-
-.task_box:hover .load_if_empty {
-  opacity: 1;
-  @include standardTransition;
-}
-
-.message_timestamp {
-  position: relative;
-  float: right;
-}
-
-.search_user_input_block {
-  position: relative;
-  width: 320px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 50px;
-  margin-bottom: 50px;
-}
-
-.user_search_input {
-  position: relative;
-  width: 250px;
-  padding: 5px;
-  font-size: 18px;
-  border-top: none;
-  border-left: none;
-  border-right: none;
-  letter-spacing: 1px;
-  border-bottom: 1px solid grey;
-  display: inline-block;
-  @include standardTransition;
-}
-
-.user_search_input:focus {
-  border-bottom: 1px solid pink;
-  @include standardTransition;
-}
-
 .user_search_button {
   position: relative;
   width: 60px;
   display: inline-block;
-}
-
-.search_image_block {
-  position: relative;
-  display: inline-block;
-  height: 35px;
-  width: 35px;
-  vertical-align: bottom;
-  cursor: pointer;
 }
 
 .search_image {
@@ -557,53 +75,11 @@ input[type="checkbox"] {
   width: 35px;
 }
 
-.navbar {
-  position: fixed;
-  height: 40px;
-  width: 100%;
-  top: 0;
-  z-index: 99;
-  background-color: grey;
-}
-
-.under_header {
-  position: relative;
-  margin-top: 40px;
-}
-
 .fixed_under {
   position: relative;
   width: 100%;
   margin-top: 40px;
   height: 95%;
-}
-
-.friend_class_container {
-  position: relative;
-  height: 90%;
-  overflow-x: hidden;
-  overflow-y: scroll;
-  scrollbar-width: thin;
-  scrollbar-color: #ffcbec #fff4fb;
-  @include testing2;
-}
-
-.remove_friend_button {
-  position: relative;
-  display: inline-block;
-  margin-left: 5px;
-  width: 15%;
-}
-
-.user_search_none_found {
-  position: relative;
-  width: 100%;
-  text-align: center;
-  top: 25px;
-  font-size: 22px;
-  @include noselect;
-  animation-name: userNotFound;
-  animation-duration: 1s;
 }
 
 @keyframes userNotFound {
@@ -615,345 +91,4 @@ input[type="checkbox"] {
     opacity: 1;
     top: 25px;
   }
-}
-
-.message_box_information_header {
-  position: relative;
-  text-align: center;
-  margin-top: 50px;
-  font-size: 24px;
-}
-
-.info_header_span {
-  color: pink;
-}
-
-.message_box_under_info {
-  position: relative;
-  margin-top: 50px;
-  width: 80%;
-  line-height: 165%;
-  font-size: 18px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.nav_item {
-  position: relative;
-  display: inline-block;
-  margin-left: 15px;
-  margin-right: 15px;
-  color: black;
-  font-size: 18px;
-  text-decoration: none;
-  height: 40px;
-  vertical-align: middle;
-  cursor: pointer;
-  @include testing;
-  @include fastTransition;
-}
-
-.nav_item:hover {
-  color: pink;
-  @include fastTransition;
-}
-
-.middle_align {
-  position: relative;
-  display: inline-block;
-  height: 20px;
-  vertical-align: middle;
-  @include testing;
-}
-
-.nav_item_active {
-  color: pink;
-}
-
-.header_image_block {
-  width: 30px;
-  height: 30px;
-  margin-top: 5px;
-  vertical-align: middle;
-  overflow: hidden;
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.header_image {
-  position: relative;
-  width: 30px;
-  height: 30px;
-  vertical-align: middle;
-}
-
-.about_header {
-  position: relative;
-  text-align: center;
-}
-
-.about_body {
-  position: relative;
-  width: 40%;
-  margin-left: auto;
-  margin-right: auto;
-  font-size: 18px;
-}
-
-.contact_header {
-  position: relative;
-  text-align: center;
-}
-
-.contact_list {
-  position: relative;
-  width: 40%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.inline_contact_info {
-  position: relative;
-  width: 250px;
-  @include testing;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 25px;
-}
-
-.contact_input {
-  padding: 5px;
-  font-size: 16px;
-}
-
-.contact_textarea {
-  position: relative;
-  display: block;
-  resize: none;
-  width: 75%;
-  margin-left: auto;
-  margin-right: auto;
-  height: 200px;
-  padding: 15px;
-  font-size: 18px;
-}
-
-.contact_label {
-  margin-right: 15px;
-  font-size: 16px;
-}
-
-.project_main {
-  height: 2000px;
-}
-
-.project_header {
-  position: relative;
-  text-align: center;
-  margin-top: 40px;
-  @include testing;
-  height: 120px;
-  background-color: pink;
-}
-
-.under_carriage {
-  position: relative;
-}
-
-.side_search_bar {
-  position: fixed;
-  display: inline-block;
-  float: left;
-  @include testing;
-  width: 33.3%;
-}
-
-.side_search_bar_container {
-  position: relative;
-  float: right;
-  padding: 10px;
-  margin-right: 15px;
-  @include testing;
-}
-
-.project_opening {
-  position: absolute;
-  @include testing2;
-  width: 33.3%;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
-}
-
-.open_project {
-  position: relative;
-  width: 80%;
-  display: block;
-  height: 200px;
-  @include testing;
-}
-
-.profile_block {
-  position: relative;
-  width: 50%;
-  margin-left: auto;
-  margin-right: auto;
-  @include testing;
-}
-
-.sign_in_button {
-  position: relative;
-  display: block;
-  padding: 10px;
-  border-radius: 10px;
-  background-color: orange;
-  font-size: 16px;
-  margin-left: auto;
-  margin-right: auto;
-  border: none;
-  cursor: pointer;
-  margin-top: 15px;
-  @include standardTransition;
-}
-
-.sign_in_button:hover {
-  background-color: pink;
-  @include standardTransition;
-}
-
-.account_creation_block {
-  display: flex;
-  justify-content: center;
-  height: 90vh;
-  width: 100%;
-  @include testing;
-}
-
-.account_creation {
-  align-self: center;
-  @include testing2;
-}
-
-.none_found {
-  position: relative;
-  text-align: center;
-  font-size: 22px;
-  font-family: "Roboto", sans-serif;
-}
-
-.add_friend_button {
-  position: absolute;
-  background-color: orange;
-  border: none;
-  right: 0;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 16px;
-  @include fastTransition;
-}
-
-.add_friend_button:hover {
-  background-color: pink;
-  @include fastTransition;
-}
-
-.add_friend_image_container {
-  position: relative;
-  float: right;
-  height: 35px;
-  width: 35px;
-}
-
-.add_friend_image {
-  position: relative;
-  height: 100%;
-  width: 100%;
-}
-
-.password_criteria {
-  width: 225px;
-  font-size: 14px;
-  margin-left: auto;
-  margin-right: auto;
-  font-family: "Roboto", sans-serif;
-  color: #838383;
-}
-
-.user_info {
-  position: absolute;
-  font-size: 18px;
-  display: inline-block;
-  height: 100%;
-  top: 0;
-  margin-top: 0;
-  font-family: "Roboto", sans-serif;
-  vertical-align: top;
-  @include testing;
-}
-
-.user_main_page {
-  position: relative;
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.user_settings {
-  position: relative;
-  display: inline-block;
-  width: 25px;
-  height: 25px;
-  overflow: hidden;
-  vertical-align: middle;
-  margin-left: 10px;
-  cursor: pointer;
-  transform: rotate(0);
-  transition: 0.5s;
-}
-
-.user_settings:hover {
-  animation-name: rotate;
-  transform: rotate(180deg);
-  transition: 0.5s;
-}
-
-.user_settings_button {
-  height: 100%;
-  width: 100%;
-}
-
-.profile_settings {
-  position: fixed;
-  display: inline-block;
-  width: 10%;
-  @include testing2;
-}
-
-.profile_item {
-  position: relative;
-  width: 100%;
-  display: block;
-  height: 40px;
-  border: 1px solid grey;
-  text-align: center;
-  font-size: 18px;
-  text-decoration: none;
-  margin-top: 25px;
-}
-
-.profile_sidebar_navlink {
-  text-decoration: none;
-  color: black;
-}
-
-.profile_sidebar_navlink_active {
-  color: pink;
-}
-
-.profile_project_listings {
-  position: relative;
-  display: inline-block;
-  width: 70%;
-  float: right;
-  @include testing2;
 }
