Better user caching and verification

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -4,6 +4,7 @@
 @import "components/initial/initial";
 @import "components/navigation/nav";
 @import "components/profile/profile";
+@import "components/projects/projects";
 
 body {
   margin: 0;
