Removed back button from MessageViewer component

--- a/client/src/components/homepage/homepage.scss
+++ b/client/src/components/homepage/homepage.scss
@@ -186,8 +186,8 @@
   overflow-x: hidden;
   overflow-y: scroll;
   scrollbar-width: thin;
+  border-radius: 6px;
   scrollbar-color: #ffcbec #fff4fb;
-  border-right: 1px dashed grey;
 }
 
 .load_if_empty {
@@ -209,6 +209,7 @@
   vertical-align: middle;
   margin-left: auto;
   margin-right: auto;
+  height: 90%;
   min-width: 300px;
 }
 
@@ -550,7 +551,6 @@
   height: 80%;
   width: 100%;
   overflow: hidden;
-  @include testing;
 }
 
 .tasklist_container:hover {
@@ -578,4 +578,9 @@
   position: relative;
   width: 100%;
   height: 100%;
+}
+
+.friend_settings {
+  position: relative;
+  float: right;
 }
