Updates now show message when no messages are present

--- a/client/src/components/homepage/homepage.scss
+++ b/client/src/components/homepage/homepage.scss
@@ -584,3 +584,11 @@
   position: relative;
   float: right;
 }
+
+.start_of_messages {
+  position: relative;
+  text-align: center;
+  margin-top: 200px;
+  font-size: 22px;
+  color: #6f6b9b;
+}
