--- a/client/src/components/homepage/homepage.scss
+++ b/client/src/components/homepage/homepage.scss
@@ -248,22 +248,6 @@
   @include standardTransition;
 }
 
-.individual_message {
-  position: relative;
-  width: 80%;
-  padding: 10px;
-  border-radius: 5px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.message_timestamp {
-  position: relative;
-  float: right;
-}
-
 .div_message_input_box {
   position: absolute;
   display: block;
@@ -591,4 +575,56 @@
   margin-top: 200px;
   font-size: 22px;
   color: #6f6b9b;
+}
+
+.right_align {
+  float: right;
+  display: inline-block;
+  width: 18%;
+  height: 30px;
+  // @include testing;
+}
+
+.message_edit_button {
+  position: relative;
+  margin-right: 10px;
+  height: 100%;
+  width: 100%;
+  cursor: pointer;
+}
+
+.message {
+  width: 80%;
+  display: inline-block;
+  // @include testing;
+}
+
+.edit_image {
+  height: 15px;
+  width: 15px;
+  border: 1px solid orange;
+  border-radius: 50%;
+  padding: 2.5px;
+  transition: 0.2s;
+}
+
+.edit_image:hover {
+  background-color: orange;
+  transition: 0.2s;
+}
+
+.individual_message {
+  position: relative;
+  width: 80%;
+  padding: 10px;
+  border-radius: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.message_timestamp {
+  position: relative;
+  vertical-align: top;
 }
