--- a/client/src/components/profile/profile.scss
+++ b/client/src/components/profile/profile.scss
@@ -51,3 +51,68 @@
   margin-right: auto;
   @include testing;
 }
+
+.contact_header {
+  position: relative;
+  text-align: center;
+}
+
+.contact_fillin_div {
+  position: relative;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.contact_fillin {
+  position: relative;
+  width: 100%;
+  height: 250px;
+  resize: none;
+}
+
+.contact_submit_button {
+  position: relative;
+  display: block;
+}
+
+.contact_subheader {
+  position: relative;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 16px;
+  color: pink;
+}
+
+.profile_settings_block {
+  position: relative;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.profile_settings_header {
+  position: relative;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.profile_setting_option {
+  position: relative;
+  width: 80%;
+  display: block;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.setting_checkbox {
+  position: relative;
+}
+
+.setting_spec {
+  position: relative;
+}
