--- a/client/src/components/homepage/homepage.scss
+++ b/client/src/components/homepage/homepage.scss
@@ -643,3 +643,12 @@
 .inner_message_container {
   display: inline-block;
 }
+
+.code_modal {
+  z-index: 99;
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  background-color: white;
+  opacity: 0.6;
+}
