--- a/client/src/components/homepage/homepage.scss
+++ b/client/src/components/homepage/homepage.scss
@@ -647,8 +647,27 @@
 .code_modal {
   z-index: 99;
   position: absolute;
-  height: 100vh;
-  width: 100vw;
+  height: 88%;
+  width: 100%;
   background-color: white;
-  opacity: 0.6;
+}
+
+.code_modal_inner_block {
+  margin-left: auto;
+  margin-right: auto;
+  width: 65%;
+  min-width: 300px;
+  height: 85%;
+}
+
+.code_modal_textarea {
+  position: relative;
+  display: block;
+  resize: none;
+  width: 100%;
+  height: 100%;
+  font-size: 18px;
+  line-height: 165%;
+  font-family: "Cousine", monospace;
+  margin-top: 25px;
 }
