--- a/client/src/components/homepage/homepage.scss
+++ b/client/src/components/homepage/homepage.scss
@@ -284,6 +284,8 @@
   height: 98%;
   resize: none;
   font-family: "Roboto", sans-serif;
+  background-color: #64617e;
+  border: 2px solid #64617e;
 }
 
 .div_message_button:hover {
@@ -358,7 +360,7 @@
   overflow-y: scroll;
   overflow-x: hidden;
   scrollbar-color: #ffcbec transparent;
-  @include testing;
+  // @include testing;
 }
 
 .message_viewer {
@@ -367,6 +369,7 @@
   display: inline-block;
   height: 100%;
   vertical-align: top;
+  background-color: #3d3b56;
 }
 
 .user_search_none_found {
@@ -625,6 +628,7 @@
   margin-right: auto;
   margin-top: 10px;
   margin-bottom: 10px;
+  background-color: #6f6b9b;
 }
 
 .message_timestamp {
@@ -652,6 +656,7 @@
   height: 88%;
   width: 100%;
   background-color: white;
+  background-color: #3d3b56;
 }
 
 .code_modal_inner_block {
@@ -672,4 +677,8 @@
   line-height: 165%;
   font-family: "Cousine", monospace;
   margin-top: 25px;
+  border: none;
+  color: #a6a4b3;
+  padding: 10px;
+  background-color: #2c2b39;
 }
