More styling changes and link addition for profile

--- a/client/src/components/profile/profile.scss
+++ b/client/src/components/profile/profile.scss
@@ -37,7 +37,8 @@
 
 .profile_sidebar_navlink {
   text-decoration: none;
-  color: black;
+  color: white;
+  opacity: 0.9;
 }
 
 .profile_sidebar_navlink_active {
