--- a/client/src/components/homepage/homepage.scss
+++ b/client/src/components/homepage/homepage.scss
@@ -46,6 +46,8 @@
   border-bottom: 1px solid grey;
   cursor: pointer;
   transition: 0.6s;
+  color: white;
+  opacity: 0.9;
 }
 
 .person:hover {
@@ -125,6 +127,9 @@
   position: relative;
   display: inline-block;
   vertical-align: middle;
+  text-decoration: none;
+  color: white;
+  opacity: 0.9;
 }
 
 .user_settings {
