--- a/client/src/components/homepage/homepage.scss
+++ b/client/src/components/homepage/homepage.scss
@@ -128,8 +128,13 @@
   display: inline-block;
   vertical-align: middle;
   text-decoration: none;
-  color: white;
-  opacity: 0.9;
+  @include standardFont;
+  @include standardTransition;
+}
+
+.user_main_page:hover {
+  color: pink;
+  @include standardTransition;
 }
 
 .user_settings {
@@ -161,9 +166,13 @@
   background-color: orange;
   border: none;
   right: 0;
-  border-radius: 5px;
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
   cursor: pointer;
   font-size: 16px;
+  background-color: white;
+  opacity: 0.9;
   @include fastTransition;
 }
 
@@ -174,9 +183,6 @@
 
 .add_friend_image_container {
   position: relative;
-  float: right;
-  height: 35px;
-  width: 35px;
 }
 
 .add_friend_image {
@@ -290,6 +296,7 @@
   resize: none;
   font-family: "Roboto", sans-serif;
   background-color: #64617e;
+  @include standardFont;
   border: 2px solid #64617e;
 }
 
@@ -331,7 +338,7 @@
   margin-left: auto;
   margin-right: auto;
   vertical-align: middle;
-  border: 1px solid grey;
+  border: none;
   font-family: "Roboto", sans-serif;
 }
 
@@ -356,14 +363,19 @@
   margin-right: auto;
 }
 
-.message_container {
-  position: relative;
-  margin-left: auto;
-  margin-right: auto;
-  height: 88%;
-  width: 100%;
+.container {
   overflow-y: scroll;
   overflow-x: hidden;
+  height: 100vh;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.message_container {
+  position: relative;
+  height: 85%;
+  overflow-y: scroll;
   scrollbar-color: #ffcbec transparent;
   // @include testing;
 }
@@ -519,7 +531,6 @@
   padding: -1px;
   height: 100%;
   margin: -1px;
-  border-left: 1px solid grey;
   vertical-align: top;
 }
 
@@ -647,6 +658,7 @@
   font-size: 16px;
   border-radius: 5px;
   border: 1px solid grey;
+  @include standardFont;
 }
 
 .inner_message_container {
