--- a/client/src/components/profile/profile.scss
+++ b/client/src/components/profile/profile.scss
@@ -69,6 +69,10 @@
   position: relative;
   width: 100%;
   height: 250px;
+  padding: 10px;
+  font-size: 16px;
+  line-height: 165%;
+  @include standardFont;
   resize: none;
 }
 
@@ -121,4 +125,11 @@
 .save_settings_button {
   position: relative;
   display: block;
+}
+
+.center_join_project {
+  position: relative;
+  margin-top: 100px;
+  text-align: center;
+  font-size: 18px;
 }
