--- a/client/src/utils.scss
+++ b/client/src/utils.scss
@@ -14,6 +14,10 @@ $darkestBlue: #1f2229;
   background-color: #3d3b56;
 }
 
+@mixin standardFontColorless {
+  font-family: "Roboto", sans-serif;
+}
+
 @mixin standardFont {
   font-family: "Roboto", sans-serif;
   color: white;
@@ -22,6 +26,10 @@ $darkestBlue: #1f2229;
 
 @mixin testing2 {
   border: 1px solid blue;
+}
+
+@mixin slowTransition {
+  transition: 0.4s ease-in-out all;
 }
 
 @mixin standardTransition {
