--- a/client/src/components/profile/profile.scss
+++ b/client/src/components/profile/profile.scss
@@ -304,3 +304,18 @@ $buttonWidth: 125px;
   opacity: 1;
   @include standardTransition;
 }
+
+.delete_button {
+  position: relative;
+  display: inline-block;
+  height: 30px;
+  width: 30px;
+  overflow: hidden;
+  vertical-align: middle;
+  cursor: pointer;
+}
+
+.delete_button_image {
+  width: 100%;
+  height: 100%;
+}
